--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+li {
+  list-style: none;
+  text-align: left;
+}
+
+button {
+  padding: 5px 20px 5px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgba(103, 133, 177, 0.411);
+}
+
+.right {
+  color: rgb(255, 255, 255);
+  background-color: rgb(22, 189, 72);
+}
+
+.notRight {
+  color: black;
+}
